styles/layout.css
.container {
  max-width: 1200px;
  margin: 0 auto;
}

.intro {
  background-color: #275cca;
}

@media (max-width: 1199px) {
  .container {
    max-width: 1000px;
  }

  .menu li {
    padding: 0 1em;
    margin-right: 0em;
  }

  .menu li:last-child {
    padding: 0;
    margin-top: 5px;
  }

  .intro {
    padding-top: 80px;
    background-image: url("assets/imgs/fly2.png");
  }
}

@media (max-width: 1000px) {
  .container {
    max-width: 700px;
  }

  .imgsMF {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
  }

  .imgsMF img {
    height: auto;
    width: 600px;
    margin: 0;
    padding: 0;
  }

  /* Conteudo incial intro ....................................  */
  .intro {
    background-image: url("assets/imgs/fly2.png");
  }

  h1 {
    font-size: 30px;
  }

  .cardsPortfolioTitle {
    margin: 0 10px;
  }

  .cardPortfolio h3 {
    font-size: 50px;
  }

  .intro h4 {
    font-size: 18px;
  }

  .cardPortfolio img {
    width: 180px;
    text-align: center;
    /* border: 2px solid red; */
  }

  .CardDescriptPortfolio {
    width: 300px;
    margin: 0 0 10px 0;
  }

  .CardDescriptPortfolio > div > img {
    width: 100px;
  }

  .HomeCardsPortfolio {
    padding: 0 10px;
  }

  .CardDescriptPortfolio span img:first-child {
    width: 38px;
  }

  .CardDescriptPortfolio span img {
    width: 30px;
    margin-right: 3px;
  }

  .CardDescriptPortfolio div article h4 {
    font-size: 20px;
  }

  .CardDescriptPortfolio p {
    font-size: 14px;
  }
}

@media (max-width: 660px) {
  .container {
    max-width: 600px;
    padding: 0 10px;
  }

  /* Estilos do menu */

  #menu {
    display: block;
    position: absolute;
    right: 0;
    top: 32px;
    width: 100%;
    background-color: var(--primary);
    border-top: 2px solid var(--support-2);
    z-index: 1000;
    height: 0;
    visibility: hidden;
    transition: ease 0.6s;
    overflow: hidden;
    overflow-y: hidden;
  }
  #nav.active-menu #menu {
    display: block;
    visibility: visible;
    height: 100vh;
    overflow-y: auto;
  }

  #menu li {
    border-bottom: 2px solid rgba(0, 0, 0, 0.08);
  }

  #menu li a {
    display: block;
    margin: 40px 0;
  }

  #menu li:last-child {
    margin: 0 20px;
  }
  #btn-menu {
    display: flex;
    border: none;
    background: none;
    cursor: pointer;
    color: var(--support-2);
    justify-content: space-between;
    align-items: baseline;
  }

  #btn-menu p {
    text-transform: none;
    margin-right: 5px;
    margin-bottom: 0;
  }

  #hamb {
    width: 20px;
    border-top: 3px solid var(--support-2);
    margin-bottom: 0;
  }

  #hamb::after,
  #hamb::before {
    display: block;
    margin-top: 5px;
    content: "";
    width: 20px;
    height: 3px;
    background: var(--support-2);
    transition: ease 0.3s;
    position: relative;
  }

  #nav.active-menu #hamb {
    border-top-color: transparent;
  }

  #nav.active-menu #hamb::before {
    transform: rotate(135deg);
  }

  #nav.active-menu #hamb::after {
    transform: rotate(-135deg);
    top: -8px;
  }

  .intro {
    background-image: url("assets/imgs/fly3.png");
    padding-top: 50px;
    padding-bottom: 30px;
  }

  .introContent {
    flex-direction: column-reverse;
    align-items: center;
    justify-content: start;
  }

  .introContent img {
    height: 300px;
  }

  .intro h1 {
    margin: 0;
  }

  .intro span {
    border-bottom: #0e3c9a 2px solid;
  }

  .intro h4 {
    margin: 10px 0 0 0;
    font-size: 16px;
    opacity: 0.7;
  }

  .HomeCardsPortfolio {
    flex-direction: column;
  }

  .portfolio {
    display: flex;
    flex-direction: column;
  }

  .cardsPortfolioTitle {
    gap: 20px;
  }

  .cardPortfolio {
    width: 70%;
  }

  .cardPortfolio img {
    width: 100%;
    /* border: 2px solid red; */
  }

  .cardPortfolio h3 {
    font-size: 30px;
  }

  .CardDescriptPortfolio > div > img {
    width: 90px;
  }

  .CardDescriptPortfolio span img:first-child {
    width: 45px;
  }

  .CardDescriptPortfolio span img {
    width: 38px;
    margin-right: 3px;
  }

  .skills {
    gap: 30px;
    justify-content: space-evenly;
  }

  .skills article {
    width: 120px;
  }

  .about article {
    flex-direction: column;
  }

  .skills img {
    height: 100px;
    width: 100px;
  }

  .questionsContent {
    flex-direction: column;
    gap: 60px;
  }

  .maintenance div {
    flex-direction: column;
  }

  .maintenance img {
    height: 90%;
    width: 90%;
  }

  .contact > div {
    flex-direction: column;
    gap: 10px;
  }

  footer {
    padding: 30px 0 30px 0;
  }

  .containerPortfolioDetail {
    padding: 0 20px;
  }

  .portfolioDetail img {
    height: 100px;
    padding-top: 70px;
    margin: 0;
  }

  .imgsMF img {
    max-height: 300px;
    max-width: 300px;
    margin: 0;
    padding: 0;
  }

  .portfolioDetailTitle {
    flex-direction: column-reverse;
  }

  .portfolioDetailTitle > h2 {
    padding-top: 1px;
    margin: 0;
  }

  .portfolioDetailCard span {
    flex-direction: column;
  }

  .portfolioDetailCard img {
    padding: 0;
  }

  .PortfolioEndContent div {
    flex-direction: column;
  }

  .PortfolioEndContent div img {
    height: 500px;
  }

  .PortfolioEndContent ul {
    flex-wrap: wrap;
    gap: 20px;
    align-items: center;
    padding: 0;
    justify-content: center;
  }

  .PortfolioEndContent ul li {
    padding: 0;
    margin: 0;
  }

  .PortfolioEndContent ul li img {
    padding: 0;
    margin: 0;
  }
}

@media (max-width: 500px) {
  .container {
    max-width: 100%;
    margin: 0 10px;
  }

  .containerPortfolioDetail {
    margin: 0;
    padding: 10px;
  }

  .introContent {
    margin: 0 10px;
  }
  .introContent img {
    height: 250px;
  }

  .cardsPortfolioTitle {
    gap: 5px;
    padding-bottom: 10px;
  }

  .TitleDescriptPortfolio {
    padding-top: 20px;
  }

  .cardPortfolio {
    width: 80%;
  }

  .cardPortfolio img {
    width: 100%;
    /* border: 2px solid red; */
  }

  .cardPortfolio h3 {
    font-size: 20px;
  }

  .cardPortfolio h3 {
    font-size: 15px;
  }

  .about article > div > div > h2 {
    font-size: 30px;
  }

  .about article > div > h3 {
    font-size: 14px;
    margin-top: 10px;
  }

  .skills {
    gap: 10px;
    justify-content: space-evenly;
  }

  .skills article {
    width: 100px;
  }

  .about article {
    flex-direction: column;
  }

  .skills img {
    height: 70px;
    width: 70px;
  }

  .questions h2 {
    margin: 0;
    padding: 0;
  }

  .questionsContent div form span {
    flex-direction: column;
  }

  .questionsContent input {
    padding: 15px 5px 10px 5px;
  }

  .questionsContent div form span input {
    width: 97%;
  }

  .questionsContent div form button {
    background-color: var(--primary);
    color: var(--support-2);
    text-transform: uppercase;
    padding: 15px 20px 10px 20px;
    border: solid 1px var(--primary);
    border-radius: 5px;
    cursor: pointer;
    transition: all ease 0.3s;
  }

  .contact > div > article > img {
    width: 90%;
    height: 90%;
  }

  .contact button {
    width: 100%;
  }

  footer ul {
    display: flex;
    flex-direction: column;
    flex-wrap: nowrap;
    justify-content: start;
    align-items: start;
    margin: 0;

    padding: 0;
  }

  footer ul li {
    flex-basis: 100%;
    margin: 0;
    padding: 0;
  }

  footer h1 {
    padding-top: 30px;
  }

  footer h2 {
    text-decoration: underline;
  }

  footer ul li:first-child {
    width: 100%;
  }

  footer a {
    padding: 5px 0;
  }

  .success div {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding-right: 20px;
    padding-left: 20px;
    padding-top: 80px;
    padding-bottom: 20px;
  }

  .success img {
    height: 200px;
    margin: 0;
  }

  .success button {
    width: 100%;
    padding: auto;
    margin: 0;
  }
}

@media (max-width: 366px) {
  .container {
    max-width: 100%;
    margin: 0 10px;
    padding: 0;
  }

  h2 {
    font-size: 30px;
  }

  .introContent {
    margin: 0 10px;
  }
  .introContent img {
    height: 200px;
  }

  .HomeCardsPortfolio {
    margin: 0;
    padding: 0;
    align-items: center;
    padding: 0 10px;
  }
  .CardDescriptPortfolio {
    width: 100%;
  }

  .CardDescriptPortfolio > div > img {
    width: 30%;
    height: 30%;
  }

  .CardDescriptPortfolio span img:first-child {
    width: 28px;
  }

  .CardDescriptPortfolio span img {
    width: 20px;
    margin-right: 5px;
  }
  .imgsMF img {
    height: 200px;
    width: 250px;
  }
}

